WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
84938
Web Inspector: [CRASH] WebViewImpl::setZoomLevel when emulating device metrics
https://bugs.webkit.org/show_bug.cgi?id=84938
Summary
Web Inspector: [CRASH] WebViewImpl::setZoomLevel when emulating device metrics
Alexander Pavlov (apavlov)
Reported
2012-04-26 03:27:56 PDT
0x011767c5 - ../../WTF/wtf/RefPtr.h:58] WebKit::WebViewImpl::setZoomLevel 0x01146ac1 - WebDevToolsAgentImpl.cpp:277 WebKit::DeviceMetricsSupport::restore 0x01146a6f - WebDevToolsAgentImpl.cpp:199 WebKit::DeviceMetricsSupport::~DeviceMetricsSupport 0x01145733 - ../../WTF/wtf/OwnPtrCommon.h:55] WebKit::WebDevToolsAgentImpl::overrideDeviceMetrics 0x0112fd18 - InspectorClientImpl.cpp:139 WebKit::InspectorClientImpl::overrideDeviceMetrics 0x0183102e - InspectorPageAgent.cpp:917 WebCore::InspectorPageAgent::disable 0x0183090f - InspectorPageAgent.cpp:328 WebCore::InspectorPageAgent::clearFrontend 0x01808809 - InspectorController.cpp:238 WebCore::InspectorController::disconnectFrontend 0x0180875f - InspectorController.cpp:176 WebCore::InspectorController::inspectedPageDestroyed 0x018e54ed - Page.cpp:193 WebCore::Page::~Page 0x01173a2d - ../../WTF/wtf/OwnPtrCommon.h:55] WebKit::WebViewImpl::close 0x02453ce5 - render_widget.cc:1241 RenderWidget::Close 0x024488fe - render_view_impl.cc:4734 RenderViewImpl::Close 0x02455680 - ../base/bind_internal.h:132] base::internal::Invoker<1, base::internal::BindState<base::internal::RunnableAdapter<void (RenderWidget::*)()>, void (RenderWidget *), void (RenderWidget *)>, void (RenderWidget *)>::Run 0x007c5e75 - ../base/callback.h:272] MessageLoop::RunTask 0x007c62e4 - message_loop.cc:470 MessageLoop::DoWork 0x0079a3db - message_pump_mac.mm:262 base::MessagePumpCFRunLoopBase::RunWork 0x9acc23de __CFRUNLOOP_IS_CALLING_OUT_TO_A_SOURCE0_PERFORM_FUNCTION__ 0x9acc1d95 __CFRunLoopDoSources0 0x9acebc67 __CFRunLoopRun 0x9aceb47b CFRunLoopRunSpecific 0x9aceb327 CFRunLoopRunInMode 0x900fd17e RunCurrentEventLoopInMode 0x901044e6 ReceiveNextEventCommon 0x90104355 BlockUntilNextEventMatchingListInMode 0x973fda9b _DPSNextEvent 0x973fd305 -[NSApplication nextEventMatchingMask:untilDate:inMode:dequeue:] 0x973f9674 -[NSApplication run] 0x0079a6d8 - message_pump_mac.mm:562 base::MessagePumpNSApplication::DoRun 0x0079a24b - message_pump_mac.mm:179 base::MessagePumpCFRunLoopBase::Run 0x007c579b - message_loop.cc:417 MessageLoop::Run 0x0245ba68 - renderer_main.cc:281 RendererMain 0x0075b85a - content_main_runner.cc:283 (anonymous namespace)::ContentMainRunnerImpl::Run 0x0075ab19 - content_main.cc:35 content::ContentMain 0x000601f8 - chrome_main.cc:32 ChromeMain 0x0005af57 - chrome_exe_main_mac.cc:16 main 0x0005af15 start Upstreaming
http://code.google.com/p/chromium/issues/detail?id=124289
Attachments
Patch
(1.76 KB, patch)
2012-04-26 04:24 PDT
,
Alexander Pavlov (apavlov)
yurys
: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Alexander Pavlov (apavlov)
Comment 1
2012-04-26 04:24:07 PDT
Created
attachment 138974
[details]
Patch
Alexander Pavlov (apavlov)
Comment 2
2012-04-26 04:51:19 PDT
Committed
r115303
: <
http://trac.webkit.org/changeset/115303
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug