Web Inspector: [CRASH] WebViewImpl::setZoomLevel when emulating device metrics https://bugs.webkit.org/show_bug.cgi?id=84938

Check for the presence of a live Frame/FrameView before invoking methods that depend on them.

Reviewed by Yury Semikhatsky.

* src/WebDevToolsAgentImpl.cpp:
(WebKit::DeviceMetricsSupport::restore):

Canonical link: https://commits.webkit.org/102452@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@115303 268f45cc-cd09-0410-ab3c-d52691b4dbfc